[gd_scene load_steps=5 format=3 uid="uid://b4ey3mu8do4bd"]

[ext_resource type="Script" path="res://main.gd" id="1_bwigm"]
[ext_resource type="Texture2D" uid="uid://dsrt4ke1rj6y4" path="res://checker.png" id="2_f6t2o"]

[sub_resource type="Environment" id="Environment_78rsp"]
background_mode = 3
glow_enabled = true
glow_intensity = 3.45
glow_bloom = 0.33

[sub_resource type="GDScript" id="GDScript_doewc"]
script/source = "extends Polygon2D

func _process(delta: float) -> void:
  rotation += delta
"

[node name="glow" type="Node2D"]
script = ExtResource("1_bwigm")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_78rsp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
grow_horizontal = 0
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Panel" type="PanelContainer" parent="CanvasLayer"]
offset_right = 133.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 2

[node name="glow" type="CheckButton" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Eable Glow"

[node name="bg_mode" type="CheckButton" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "bg_mode Canvas"

[node name="custom bg" type="CheckButton" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "bg on extra canvas
"

[node name="main" type="Node2D" parent="."]

[node name="bg" type="TextureRect" parent="main"]
visible = false
custom_minimum_size = Vector2(1140, 648)
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_f6t2o")
stretch_mode = 1

[node name="rect" type="Polygon2D" parent="main"]
position = Vector2(272, 320)
color = Color(0, 1, 0, 1)
polygon = PackedVector2Array(-128, -64, -128, 64, 128, 64, 128, -64)
script = SubResource("GDScript_doewc")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="bg" type="TextureRect" parent="ParallaxBackground"]
custom_minimum_size = Vector2(1140, 648)
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_f6t2o")
stretch_mode = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[connection signal="toggled" from="CanvasLayer/Panel/VBoxContainer/glow" to="." method="_on_glow_toggled"]
[connection signal="toggled" from="CanvasLayer/Panel/VBoxContainer/bg_mode" to="." method="_on_bg_mode_toggled"]
[connection signal="toggled" from="CanvasLayer/Panel/VBoxContainer/custom bg" to="." method="_on_custom_bg_toggled"]
